# sound-bakery-unreal

./: .gitignore  CMakeLists.txt  SoundBakery.uplugin
Source/SoundBakery/: SoundBakery.Build.cs
Source/SoundBakery/Private/: SoundBakery.cpp  SoundBakerySettings.cpp
Source/SoundBakery/Public/: SoundBakery.h  SoundBakerySettings.h
